# Agentic-AI

./: main.py  pyproject.toml  requirements.txt
app/agents/: saveGraph.py
app/agents/agent_streaming/: main.py
app/agents/agent_streaming/etc/: trip_state.py
app/agents/agent_streaming/graph/: build_graph.py
app/agents/agent_streaming/nodes/: approve_itinerary.py  beach_agent.py  budget_estimator.py  gather_trip_info.py  indoor_agent.py  itinerary_planner.py  local_events.py  weather_agent.py
app/agents/conditional_flow/: main.py
app/agents/conditional_flow/etc/: complaint_state.py
app/agents/conditional_flow/graph/: build_graph.py
app/agents/conditional_flow/node/: auto_response.py  classify_severity.py  escalate_to_manager.py  escalate_to_support.py
app/agents/iteration_flow/: main.py
app/agents/iteration_flow/etc/: tweet_state.py
app/agents/iteration_flow/graph/: build_graph.py
app/agents/iteration_flow/nodes/: evaluate_tweet.py  generate_tweet.py  optimize_tweet.py
app/agents/parallel_flow/: main.py
app/agents/sequencial_flow/: main.py
app/api/v1/endpoints/: azure_api.py  (+4 more)
app/core/: llm.py  prompts.py
app/crews/data_analysis_agent/: main.py  pipeline.py
app/crews/lang_graph_chatbot/: main.py
app/crews/my_cube_query_agent/: main.py
app/schemas/: agent.py
static/crew_chart_6b29934c-de29-471e-9079-5372cf15d2b9/: chart_code.py  stderr.txt  stdout.txt
static/crew_chart_be3e62e7-6b9f-4307-b8c7-3de76f7228a9/: chart_code.py  input.csv  stderr.txt
static/crew_table_4b87ee00-f052-42a2-9109-c2ecd0f29e47/: output.csv  table_code.py
(+47 files in other folders)
