[project]
name = "backend2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "grandalf>=0.8",
    "httpx>=0.28.1",
    "kaleido>=1.0.0",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.2",
    "langgraph>=0.5.1",
    "litellm>=1.72.6.post1",
    "openai>=1.88.0",
    "plotly>=6.2.0",
    "sse-starlette>=2.3.6",
    "tabulate>=0.9.0",
]
